petite modif, style présentation ok

--- a/src/View/Presentation/presentation.html.twig
+++ b/src/View/Presentation/presentation.html.twig
@@ -2,7 +2,7 @@
 {% block title %}Notre équipe{% endblock %}
 {% block stylesheet %}
 {{ parent() }}
-<link rel="stylesheet" type="text/css" href="../assets/css/presentation.css">
+<link rel="stylesheet" type="text/css" href="/assets/css/presentation.css">
 {% endblock %}
 
 
