--- a/src/View/footer/footer.html.twig
+++ b/src/View/footer/footer.html.twig
@@ -1,5 +1,7 @@
 <div class="footer_logo d-flex justify-content-center">
-	<img src="../assets/images/logo-typo.svg" style="width:150px;height:188px;" class="" alt="#" />
+	<a href="/">
+		<img src="assets/images/logo-typo.svg" style="width:150px;height:188px;"  alt="Gryffondor Quidditch" />
+	</a>
 </div>
 
 	<div class="footer_sponsors">
@@ -8,18 +10,18 @@
 		</p>
 
 			<div class="flex_container  ">
-				<img src="../assets/images/hogwarts.png" class="img-fluid" alt="Hogwarts" />
-				<img src="../assets/images/owlsenger.png" class="img-fluid" alt="owlsenger" />
-				<img src="../assets/images/chaudron.png" class="img-fluid" alt="Chaudron Magique" />
+				<img src="assets/images/hogwarts.png" class="img-fluid" alt="Hogwarts" />
+				<img src="assets/images/owlsenger.png" class="img-fluid" alt="owlsenger" />
+				<img src="assets/images/chaudron.png" class="img-fluid" alt="Chaudron Magique" />
 			</div>
 	</div>
 
 <div class="footer_wrapper">
 		<nav class="nav nav-pills flex-column flex-md-row justify-content-center">
 			<a class="flex-sm-fill text-center nav-link" href="/presentation">À propos de Gryffondor Quidditch</a>
-			<a class="flex-sm-fill text-center nav-link" href="/team">Nous contacter</a>
-			<a class="flex-sm-fill text-center nav-link" href="#!">Equipe</a>
-			<a class="flex-sm-fill text-center nav-link" href="#!">Calendrier</a>
+			<a class="flex-sm-fill text-center nav-link" href="/contact">Nous contacter</a>
+			<a class="flex-sm-fill text-center nav-link" href="/team">Equipe</a>
+			<a class="flex-sm-fill text-center nav-link" href="/calendar">Calendrier</a>
 		</nav>
 </div>
 
@@ -28,5 +30,3 @@
 		<p>© 2018 Code Quantum, Some Rights Reserved<p> 
 	</div>
 </div>
-
-
