--- a/src/View/Calendar/calendar.html.twig
+++ b/src/View/Calendar/calendar.html.twig
@@ -34,6 +34,7 @@
 
     <div class="dateMatch d-flex justify-content-center">
         <p class="text-center">
+            {{ game.getDate }}<br>
             {{ game.dateTimeGame }}<br>
 
         </p>
@@ -45,7 +46,7 @@
 
 
             <div class="logo">
-                <p class="nameTeam2">{{ game.nameTeam2 }}</p>
+                <p class="nameTeam">{{ game.nameTeam2 }}</p>
                 <img class="card-img-top" src="{{ game.logoTeam2 }}" alt="Logo équipe">
             </div>
 
