--- a/src/View/Navbar/globalNavbar.html.twig
+++ b/src/View/Navbar/globalNavbar.html.twig
@@ -1,4 +1,4 @@
-<nav class="navbar fixed-top navbar-expand-sm navbar-light bg-light nav-home " id="navbar">
+<nav class="navbar navbar-expand-sm navbar-light bg-light nav-home fixed-top" id="navbar">
   <div id="logo">
     <a href="/">{% include 'logo/lion.svg' %}</a>
   </div>
