--- a/src/View/AdminLogin/adminLogin.html.twig
+++ b/src/View/AdminLogin/adminLogin.html.twig
@@ -1,9 +1,6 @@
 {% extends 'Home/home.html.twig' %}
 {% block navbar %}{% endblock %}
 {% block content %}
-
-    {{ dump(adminLogin) }}
-    {{ dump(check) }}
     <div class="container py-5">
         <div class="row">
             <div class="col-md-12">
@@ -14,17 +11,44 @@
                             <div class="card-header">
                                 <h3 class="mb-0">Connection</h3>
                             </div>
+                            {% if errorCode == "wrongPassword" %}
+                                <div class="alert alert-danger" role="alert">
+                                    Mot de passe incorrect.
+                                </div>
+                            {% endif %}
+                            {% if errorCode == "wrongLogin" %}
+                                <div class="alert alert-danger" role="alert">
+                                    Identifiant inconnu.
+                                </div>
+                            {% endif %}
                             <div class="card-body">
                                 <form class="form" role="form" id="formLogin" method="POST">
                                     <div class="form-group">
                                         <label for="login">Identifiant</label>
-                                        <input type="text" class="form-control form-control-lg rounded-0" name="login" id="login" required="required">
+                                        <input
+                                                type="text"
+                                                class="form-control form-control-lg rounded-0"
+                                                name="login"
+                                                id="login"
+                                                value="{{ login }}"
+                                                required="required"
+                                        >
                                     </div>
                                     <div class="form-group">
                                         <label>Mot de passe</label>
-                                        <input type="password" class="form-control form-control-lg rounded-0" id="password" name="password" required="required">
+                                        <input
+                                                type="password"
+                                                class="form-control form-control-lg rounded-0"
+                                                id="password"
+                                                name="password"
+                                                required="required"
+                                        >
                                     </div>
-                                    <button type="submit" class="btn btn-success btn-lg float-right" id="btnLogin">Valider</button>
+                                    <button
+                                            type="submit"
+                                            class="btn btn-success btn-lg float-right"
+                                            id="btnLogin"
+                                    >Valider</button>
                                 </form>
                             </div>
                         </div>
