--- a/src/View/Contact/contact.html.twig
+++ b/src/View/Contact/contact.html.twig
@@ -7,6 +7,7 @@
 
 
 {% block content %}
+    {{ parent() }}
         <div class="container">
             {% if error != "" %}
                 <div class="alert alert-warning" role="alert">
