--- a/src/View/Home/home.html.twig
+++ b/src/View/Home/home.html.twig
@@ -7,6 +7,7 @@
 {% block navbar %}{% include 'Navbar/homeNavbar.html.twig'%}{% endblock %}
 {% block footer %}{% endblock %}
 {% block content %}
+    {{ parent() }}
     <div class="container-fluid">
         <div class="row logo d-flex align-items-center">
             <img class="img-logo" src="/assets/images/home/homeLogo.png">
