--- a/src/View/Player/player.html.twig
+++ b/src/View/Player/player.html.twig
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block content %}
-
+    {{ parent() }}
 <div class="container-fluid">
 
     <div class="row d-flex justify-content-around">
