--- a/src/View/layout.html.twig
+++ b/src/View/layout.html.twig
@@ -26,7 +26,11 @@
 <body>
 
  {% block navbar %}{% include 'Navbar/globalNavbar.html.twig'%}{% endblock %}
- {% block content %}{% endblock %}
+ {% block content %}
+     {% if admin %}
+     <button type="button" class="btn btn-success" id="admin-button"><i class="fas fa-cogs"></i> Administration</button>
+     {% endif %}
+ {% endblock %}
 
 
 
