--- a/public/assets/css/calendar.css
+++ b/public/assets/css/calendar.css
@@ -1,6 +1,5 @@
 
 
-
 /*placement de l'image principale*/
 .margin
 {
@@ -14,7 +13,6 @@
 
 .title_calendar
 {
-
     margin-left: 0; /*PLUS DE MARGE*/
     margin-right: 0; /*PLUS DE MARGE*/
     font-family: 'Cinzel Decorative', cursive;
@@ -116,29 +114,7 @@
     justify-content: space-between;
 }
 
-.nameTeam
-{
 
-}
-
-@media (max-width: 992px)
-{
-
-
-
-
-
-}
-
-
-
-@media (max-width: 768px)
-{
-
-
-
-
-}
 
 @media (max-width: 550px)
 {
@@ -148,9 +124,22 @@
         padding-top: 60px;
     }
 
-    .banner
+    .img_coupe
     {
         display: none;
+    }
+
+    .title_calendar
+    {
+        margin-left: 0; /*PLUS DE MARGE*/
+        margin-right: 0; /*PLUS DE MARGE*/
+        font-family: 'Cinzel Decorative', cursive;
+        margin-top: 5%;
+        margin-bottom: 10%;
+        justify-content: center;
+        color: #cd900e;
+        font-size: 5vw;
+        font-weight: bold;
     }
 
     .logo_score_boxes
@@ -170,10 +159,7 @@
         width: 100%;
     }
 
-    .logo
-    {
 
-    }
 
 }
 
