Update du Nom, Prénom et Taille OK. Autres champs à faire. AbstractManager->update créé.

--- a/public/assets/css/player.css
+++ b/public/assets/css/player.css
@@ -124,3 +124,10 @@ body.hasHover .custom-card:hover .custom-card-text, .clicked .custom-card-text
 }
 
 /*****************************************************/
+
+.btn-admin
+{
+    position: absolute;
+    top: 0;
+    z-index: 20;
+}
