ajout des boutons d'admin 'supprimer/aditer'

--- a/public/assets/css/calendar.css
+++ b/public/assets/css/calendar.css
@@ -25,6 +25,16 @@
 }
 
 
+/***********************/
+/*      ADMIN          */
+/***********************/
+
+.datebox > .boutedit
+{
+    position: absolute;
+    left: 2vw;
+}
+
 
 /***********placement et styles des vignettes matchs********/
 
