--- a/src/View/Calendar/calendar.html.twig
+++ b/src/View/Calendar/calendar.html.twig
@@ -17,7 +17,9 @@
           <p>Calendrier</p>
       </div>
 
-
+{% if admin %}
+   <a href="calendar/add"><button type="button" class="btn btn-info" ">Ajouter un Match</button></a>
+{% endif %}
 
     {% for game in games %}
 
@@ -27,10 +29,18 @@
         <div class="row ligne">
             <div class="match_banner">
                 <div class=" d-flex date_box justify-content-center">
+                    {% if admin %}
+                    <button type="button" class="btn btn-success boutedit">Editer le Match</button>
+                    <button type="button" class="btn btn-danger boutdel">Supprimer le match</button>
+                    {% endif %}
                     <p class="dateMatch text-center">
                         {{ game.getDate }}<br>
                         {{ game.getTime }}<br>
+
+
                     </p>
+
+
                 </div>
 
                 <div class="logo_score_boxes">
