--- a/src/View/footer/footer.html.twig
+++ b/src/View/footer/footer.html.twig
@@ -9,7 +9,7 @@
 			<span class="footer_text">Partenaires</span>
 		</p>
 
-			<div class="flex_container  ">
+			<div class="flex_container">
 				<img src="assets/images/hogwarts.png" class="img-fluid" alt="Hogwarts" />
 				<img src="assets/images/owlsenger.png" class="img-fluid" alt="owlsenger" />
 				<img src="assets/images/chaudron.png" class="img-fluid" alt="Chaudron Magique" />
@@ -26,7 +26,7 @@
 </div>
 
 <div class="footer_copyright">
-	<div class="container d-flex p-2 justify-content-center">
+	<div class="d-flex p-2 justify-content-center">
 		<p>© 2018 Code Quantum, Some Rights Reserved<p> 
 	</div>
 </div>
