--- a/public/assets/css/footer.css
+++ b/public/assets/css/footer.css
@@ -31,3 +31,10 @@
 .flex_container > img{
 	padding: 5px 8px;
 }
+.footer_partenaires{
+	text-align: center;
+}
+.footer_partenaires img{
+	max-width: 29%;
+	margin : 1.5%;
+}
