--- a/src/View/footer/footer.html.twig
+++ b/src/View/footer/footer.html.twig
@@ -9,7 +9,7 @@
 			<span class="footer_text">Partenaires</span>
 		</p>
 
-			<div class="flex_container">
+			<div class="footer_partenaires">
 				<img src="assets/images/hogwarts.png" class="img-fluid" alt="Hogwarts" />
 				<img src="assets/images/owlsenger.png" class="img-fluid" alt="owlsenger" />
 				<img src="assets/images/chaudron.png" class="img-fluid" alt="Chaudron Magique" />
