--- a/src/View/Player/edit.html.twig
+++ b/src/View/Player/edit.html.twig
@@ -14,7 +14,7 @@
             <h1 class="mb-0 text-dark">Modification joueur</h1>
         </div>
         <div class="card-body">
-            <form method="post">
+            <form method="post" enctype="multipart/form-data">
                 <input hidden name="id" value="{{ player.id }}">
                 <div class="form-group">
                     <label for="lastName">Nom</label>
@@ -65,7 +65,7 @@
                 </div>
                 <div class="form-group">
                     <label for="picture">Changer de photo :</label>
-                    <input type="file" class="form-control-file" id="picture" onchange="readURL(this);">
+                    <input type="file" name="picture" class="form-control-file" id="picture" onchange="readURL(this);">
                 </div>
                 <button type="submit" class="btn btn-success">Enregistrer</button>
                 <a href="/team" type="button" class="btn btn-primary">Retour au site</a>
