--- a/src/View/Player/edit.html.twig
+++ b/src/View/Player/edit.html.twig
@@ -67,6 +67,16 @@
                     <label for="picture">Changer de photo :</label>
                     <input type="file" name="picture" class="form-control-file" id="picture" onchange="readURL(this);">
                 </div>
+                <div class="form-group">
+                    <label for="broomstick">Balai</label>
+                    <select id="broomstick" name="idBroomstick">
+                        {% for broomstick in broomsticks %}
+                        <option value="{{ broomstick.id }}"
+                                {% if player.idBroomstick == broomstick.id %}selected="selected"{% endif %}
+                        >{{ broomstick.model }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
                 <button type="submit" class="btn btn-success">Enregistrer</button>
                 <a href="/team" type="button" class="btn btn-primary">Retour au site</a>
             </form>
