--- a/src/View/Contact/contact.html.twig
+++ b/src/View/Contact/contact.html.twig
@@ -30,10 +30,14 @@
                 </div>
             </div>
             <div class="row">
-                <ul id="Contact__informations" class="col-xs-12 col-md-4">
 
+                <ul id="Contact__informations" class="col-xs-12 col-md-4 {% if admin %}border-admin{% endif %}">
+                    {% if admin %}
+                        <a href="/contact/edit" type="button" class="btn btn-success btn-admin">Modifier</a>
+                    {% endif %}
                     <li>
                         <div>
+
                             <i class="fas fa-compass fa-2x"></i>
                             <p>{{ contactInfo.0.title|raw }} :</p>
                             <p>{{ contactInfo.0.content|nl2br }}</p>
