form ajout match ok, début du style form ajout match

--- a/src/View/Calendar/add.html.twig
+++ b/src/View/Calendar/add.html.twig
@@ -1,11 +1,4 @@
-{% extends 'Calendar/calendar.html.twig' %}
-{% block navbar %}{% endblock %}
-{% block content %}
-
-<form method="POST" action="">
+{% extends 'Calendar/editMatch.html.twig' %}
+{% block formTitle %}Ajouter un Match{% endblock %}
 
 
-</form>
-
-{% endblock %}
-{% block footer %}{% endblock %}
