--- a/src/View/Player/edit.html.twig
+++ b/src/View/Player/edit.html.twig
@@ -61,7 +61,8 @@
                 </div>
                 <div class="form-group">
                     <h4 id="player-picture-title">Photo actuelle :</h4>
-                    <img id="player-picture" src="{{ player.picture }}">
+                    <img id="player-picture" src="{{ player.picture }}" a
+                         lt="Photo de {{ player.lastName }} {{ player.firstName }}">
                 </div>
                 <div class="form-group">
                     <label for="picture">Changer de photo :</label>
