Ajout de match OK

--- a/src/View/Calendar/editMatch.html.twig
+++ b/src/View/Calendar/editMatch.html.twig
@@ -11,9 +11,9 @@
   {% block content %}
 
 <div class="container-fluid">
-    <div class="row">
+    <div class="row" style="margin-top: 60px;">
         <div class="card col-md-6 offset-md-3">
-            <div class="card-header mt-8">
+            <div class="card-header">
                 <h1 class="mb-0 text-dark">{% block formTitle %} {{ game.nameTeam1 }} / {{ game.nameTeam2 }}{% endblock %} </h1>
             </div>
             <div class="card-body">
