--- a/public/assets/css/calendar.css
+++ b/public/assets/css/calendar.css
@@ -97,7 +97,7 @@
 {
 
     font-family: 'Cinzel Decorative', cursive;
-    font-size: 20px;
+    font-size: 19px;
     color: white;
     text-align: center;
     margin: 5px;
@@ -123,6 +123,12 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+}
+
+card-img-top
+{
+    width: 150px;
+    height: 150px;
 }
 
 
