--- a/src/View/Calendar/calendar.html.twig
+++ b/src/View/Calendar/calendar.html.twig
@@ -7,30 +7,30 @@
 
 {% block content %}
 
-<div class="container-fluid banner">
-    <div class="margin">
     <img src="assets/images/teams/coupe_quidditch.jpg" class="img-fluid img_coupe" alt="Responsive image">
-    </div>
-</div>
       <div class="row title_calendar" id="title_calendar">
           <p>Calendrier</p>
       </div>
 
 {% if admin %}
-   <a href="calendar/add"><button type="button" class="btn btn-info" ">Ajouter un Match</button></a>
+    <div class="container-fluid">
+        <div class="row d-flex justify-content-center">
+            <a href="calendar/add" type="button" class="btn btn-info">Ajouter un Match</a>
+        </div>
+    </div>
 {% endif %}
 
     {% for game in games %}
 
 
 
-    <div class="container">
+    <div class="container-fluid">
         <div class="row ligne">
             <div class="match_banner">
                 <div class=" d-flex date_box justify-content-center">
                     {% if admin %}
-                        <a href="/calendar/edit-{{ game.id }}"><button type="button" class="btn btn-success boutedit">Editer le Match</button></a>
-                        <a><button type="button" class="btn btn-danger boutdel">Supprimer le match</button></a>
+                        <a href="/calendar/edit-{{ game.id }}" type="button" class="btn btn-success m-1 boutedit">Editer le Match</a>
+                        <a href="/calendar/delete-{{ game.id }}" type="button" class="btn btn-danger m-1 boutdel">Supprimer le match</button></a>
                     {% endif %}
                     <p class="dateMatch text-center">
                         {{ game.getDate }}<br>
@@ -72,7 +72,8 @@
                 </div>
             </div>
         </div>
-        </div>
+    </div>
+
 
     {% endfor %}
 
